--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,6 +25,7 @@
   --footer-bg: linear-gradient(to right, #348F50, #2f829d);
   --footer-text-color: rgba(255,255,255,.85);
   --footer-text-hover-color: rgba(255,255,255,1);
+  --footer-border: 2px solid rgba(255, 255, 255, .1);
 
   --shadow-level-1: 0 0.125em 0.313em rgba(10, 37, 64, .09), 0 0.063em 0.125em rgba(0, 0, 0, .07);
   --shadow-level-2: 0 0.250em 0.375em rgba(10, 37, 64, .09), 0 0.063em 0.188em rgba(0, 0, 0, .08);
@@ -32,4 +33,8 @@
   --shadow-level-4: 0 0.938em 1.5625em rgba(10, 37, 64, .1), 0 0.313em 0.938em rgba(0, 0, 0, .07);
   --shadow-level-5: 0 1.25em 2.5em rgba(10, 37, 64, .15), 0 0.313em 0.938em rgba(0, 0, 0, .1);
 }
+
 $primary:#21a649;
+$font-family-sans-serif: 'Roboto', Helvetica, Arial, sans-serif;
+$body-text-align:  left;
+$btn-font-family: $font-family-sans-serif;
