--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,31 +1,58 @@
 .footer {
   --footer-gap: 2rem;
+  --footer-grid-count: 3;
   padding: 3rem 0 0;
   background: var(--footer-bg);
   color: var(--footer-text-color);
 
+  @media (min-width: 576px) {
+    --footer-grid-count: 1;
+  }
+
+  // Medium devices (tablets, 768px and up)
+  @media (min-width: 768px) {
+    --footer-grid-count: 2;
+  }
+
+  // Large devices (desktops, 992px and up)
+  @media (min-width: 992px) {
+    --footer-grid-count: 3;
+  }
+
+  // X-Large devices (large desktops, 1200px and up)
+  @media (min-width: 1200px) {
+    --footer-grid-count: 4;
+  }
+
+
   &__content {
+
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(var(--footer-grid-count), 1fr);
     grid-gap: var(--footer-gap);
   }
-  &__content-block{
+
+  &__content-block {
 
   }
-  &__contacts{
+
+  &__contacts {
     line-height: 1.48;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
     font-style: normal;
   }
-  &__contacts-item{
+
+  &__contacts-item {
 
   }
-  &__contacts-link{
+
+  &__contacts-link {
     color: var(--footer-text-color);
     text-decoration: none;
-    &:hover{
+
+    &:hover {
       color: var(--footer-text-hover-color);
       text-decoration: underline;
     }
@@ -37,9 +64,15 @@
     margin-top: 2rem;
     padding: 1rem 0;
     justify-content: space-between;
-    border-top: 2px solid rgba(255,255,255,0.1);
+    border-top: var(--footer-border);
     font-size: .875rem;
     gap: 1rem;
     color: var(--footer-text-color);
+  }
+  &__socials{
+
+  }
+  &__socials-item{
+    @include social-icon;
   }
 }
