--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@
   --card-radius: .5rem;
   --grad-color-1: #348F50;
   --grad-color-2: #2f829d;
+
   --gray-line-color:#E9ECEF;
 
   --grad-color-transparent-1: rgba(52,143,80,.85);
@@ -22,10 +23,11 @@
 
   --shadow-sm: 0 2px 3px rgb(0 0 0 / 8%);
 
-  --footer-bg: linear-gradient(to right, #348F50, #2f829d);
+  --footer-bg: linear-gradient(to right, var(--grad-color-1), var(--grad-color-2));
   --footer-text-color: rgba(255,255,255,.85);
   --footer-text-hover-color: rgba(255,255,255,1);
   --footer-border: 2px solid rgba(255, 255, 255, .1);
+  --footer-social-bg: rgba(255, 255, 255, .1);
 
   --shadow-level-1: 0 0.125em 0.313em rgba(10, 37, 64, .09), 0 0.063em 0.125em rgba(0, 0, 0, .07);
   --shadow-level-2: 0 0.250em 0.375em rgba(10, 37, 64, .09), 0 0.063em 0.188em rgba(0, 0, 0, .08);
@@ -37,4 +39,6 @@
 $primary:#21a649;
 $font-family-sans-serif: 'Roboto', Helvetica, Arial, sans-serif;
 $body-text-align:  left;
+$fa-font-path : "../fonts";
 $btn-font-family: $font-family-sans-serif;
+$footerClass:'footer';
