--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,5 +14,6 @@
 @import "layout/page";
 @import "layout/elements";
 @import "layout/reviews";
+@import "layout/person";
 @import "layout/footer";
 
