--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,10 +10,14 @@
 @import "vendor/fontawesome/regular";
 @import "vendor/fontawesome/v4-shims";
 
+@import "vendor/owl-carousel/owl.carousel";
+
 @import "layout/header";
 @import "layout/page";
 @import "layout/elements";
 @import "layout/reviews";
 @import "layout/person";
 @import "layout/footer";
+
+
 
