--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -34,6 +34,12 @@
   --shadow-level-3: 0 0.063em 0.313em 0 rgba(10, 37, 64, .07), 0 0.438em 1.063em 0 rgba(0, 0, 0, .1);
   --shadow-level-4: 0 0.938em 1.5625em rgba(10, 37, 64, .1), 0 0.313em 0.938em rgba(0, 0, 0, .07);
   --shadow-level-5: 0 1.25em 2.5em rgba(10, 37, 64, .15), 0 0.313em 0.938em rgba(0, 0, 0, .1);
+
+  --person-card-radius:.5rem;
+  --person-avatar-size: 100px;
+  --person-card-gap:.5rem;
+  --person-card-padding: 2rem;
+  --person-card-bg: #fff;
 }
 
 $primary:#21a649;
@@ -42,3 +48,4 @@ $body-text-align:  left;
 $fa-font-path : "../fonts";
 $btn-font-family: $font-family-sans-serif;
 $footerClass:'footer';
+
