--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -40,6 +40,8 @@
   --person-card-gap:.5rem;
   --person-card-padding: 2rem;
   --person-card-bg: #fff;
+
+  --swiper-fade-grad-color:#f6f9fc;
 }
 
 $primary:#21a649;
