--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,8 @@
 @import "layout/elements";
 @import "layout/reviews";
 @import "layout/person";
+@import "layout/video";
+@import "layout/call-to-action";
 @import "layout/maps";
 
 @import "layout/footer";
