--- a/src/scss/layout/_elements.scss
+++ b/src/scss/layout/_elements.scss
@@ -39,3 +39,27 @@
     box-shadow: var(--shadow-level-3);
   }
 }
+.section-split-cards{
+  padding: 5rem 0;
+}
+.grid-split-cards{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+.grid-split-card__item{
+  background: url('https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80') fixed center / cover;
+  min-height: 200px;
+  box-shadow: var(--shadow-level-2);
+  border-radius: .5rem;
+  position: relative;
+
+  &::before{
+    content:"";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.3);
+  }
+}
+
