--- a/src/scss/layout/_elements.scss
+++ b/src/scss/layout/_elements.scss
@@ -48,7 +48,10 @@
   gap: 1rem;
 }
 .grid-split-card__item{
-  background: url('https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80') fixed center / cover;
+  background-image: url('https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   min-height: 200px;
   box-shadow: var(--shadow-level-2);
   border-radius: .5rem;
